--- a/santorini.html
+++ b/santorini.html
@@ -7,10 +7,18 @@
     <title>Santorini</title>
 </head>
 <body>
-    <button type="button" onclick="showAlert('Viaje ahora Pague después')">Viaja Ahora</button>
-    <button type="button" onclick="showAlert('Varias Aereolineas disponibles')">Compra tu ticket</button>
-    <button type="button" onclick="showAlert('Reserva desde ya y paga en cuotas')">Reservas</button>
-    <button type="button" onmouseover="showAlert('Descuentos desde el 10%')">Descuentos</button>
+    <div onclick="showAlert('Viaje ahora Pague después')">
+        Viaja Ahora
+    </div><br>
+    <div onclick="showAlert('Varias Aereolineas disponibles')">
+        Compra tu ticket
+    </div><br>
+    <div onclick="showAlert('Reserva desde ya y paga en cuotas')">
+        Reservas
+    </div><br>
+    <div onmouseover="showAlert('Descuentos desde el 10%')">
+        Descuentos
+    </div>
 </body>
     <script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="js-mykonos.js"></script>
